Update alacritty, add sound stuff

--- a/polybar/config.ini
+++ b/polybar/config.ini
@@ -22,13 +22,10 @@ include-file = $HOME/.config/polybar/colors.ini
 
 [bar/example]
 width = 1900
-height = 40pt
+height = 20pt
 radius = 0
 offset-x = 10
-offset-y = 5
-monitor = HDMI-0
-monitor-strict = true
-
+offset-y = 10
 ; dpi = 96
 
 background = ${colors.base}
@@ -44,8 +41,8 @@ padding-right = 1
 
 module-margin = 1
 
-font-0 = monospace;2
-font-1 = "Symbols Nerd Font Mono:size=12;2.5"
+font-0 = Hack:size=10;2
+font-1 = "Symbols Nerd Font Mono:size=10;2.5"
 
 modules-left = logo xworkspaces xwindow
 modules-right = pulseaudio date
@@ -87,7 +84,7 @@ padding-right = 1
 
 module-margin = 1
 
-font-0 = monospace;2
+font-0 = Hack;2
 font-1 = "Symbols Nerd Font Mono:size=12;2.5"
 
 modules-left = logo xworkspaces xwindow
