--- a/polybar/modules.ini
+++ b/polybar/modules.ini
@@ -70,6 +70,8 @@ label-volume = %percentage%%
 label-muted = "󰖁"
 label-muted-foreground = ${colors.}
 
+click-right = pavucontrol &
+
 [module/xkeyboard]
 type = internal/xkeyboard
 blacklist-0 = num lock
