--- a/alacritty/alacritty.yml
+++ b/alacritty/alacritty.yml
@@ -17,13 +17,13 @@ font:
     x: 0
     y: 0
   normal:
-    family: monospace
+    family: Hack
     style: Regular
   bold:
-    family: monospace
+    family: Hack
     style: Bold
   italic:
-    family: monospace
+    family: Hack
     style: Italic
 
   size: 10.0
