--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -172,7 +172,7 @@ rounded-corners-exclude = [
 
 
 # Parameters for background blurring, see the *BLUR* section for more information.
-blur-method = "kawase"
+blur-method = "gaussian"
 blur-size = 55
 #
 blur-deviation = false
