--- a/picom/picom.conf
+++ b/picom/picom.conf
@@ -146,6 +146,7 @@ opacity-rule = [ "100:class_g *= 'firefox'",
 		 "80:class_g *= 'Rofi'",
          "95:class_g  *= 'jetbrains-idea-ce'",
          "90:class_g  *= 'libreoffice-writer'",
+         "90:class_g  *= 'fluxbox-toolbar'",
          "90:class_g  *= 'Alacritty'"]; 
 #opacity-rule = [ "80:class_g = 'dmenu'" ];
 #
